// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromotionScreen renders component when lose the prize 1`] = `
<div
  className="sc-htpNat lftjIv"
>
  <header
    className="sc-bdVaJa blMrvh"
  >
    <a
      href="#"
    >
      <img
        alt="CarNext logo"
        className="sc-bwzfXH hqJQNA"
        src="car-next-logo.png"
        title="CarNext logo"
      />
    </a>
  </header>
  <div
    className="sc-bxivhb hdqdbk"
  >
    <section
      className="sc-ifAKCX cFlEyZ"
    >
      <h1
        className="sc-EHOje fvXwPD"
      >
        Better luck next time!
      </h1>
      <p
        className="sc-bZQynM GNZEL"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In erat eros, finibus ac ullamcorper sit amet, tempus quis lacus. Quisque eleifend semper pretium.
      </p>
    </section>
  </div>
</div>
`;

exports[`PromotionScreen renders component when win the prize 1`] = `
<div
  className="sc-htpNat lftjIv"
>
  <header
    className="sc-bdVaJa blMrvh"
  >
    <a
      href="#"
    >
      <img
        alt="CarNext logo"
        className="sc-bwzfXH hqJQNA"
        src="car-next-logo.png"
        title="CarNext logo"
      />
    </a>
  </header>
  <div
    className="sc-bxivhb hdqdbk"
  >
    <section
      className="sc-ifAKCX cFlEyZ"
    >
      <h1
        className="sc-EHOje fvXwPD"
      >
        Congratulations, you won!
      </h1>
      <p
        className="sc-bZQynM GNZEL"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In erat eros, finibus ac ullamcorper sit amet, tempus quis lacus. Quisque eleifend semper pretium.
      </p>
    </section>
  </div>
</div>
`;

exports[`PromotionScreen renders default component 1`] = `
<div
  className="sc-htpNat lftjIv"
>
  <header
    className="sc-bdVaJa blMrvh"
  >
    <a
      href="#"
    >
      <img
        alt="CarNext logo"
        className="sc-bwzfXH hqJQNA"
        src="car-next-logo.png"
        title="CarNext logo"
      />
    </a>
  </header>
  <div
    className="sc-bxivhb hdqdbk"
  >
    <section
      className="sc-ifAKCX cFlEyZ"
    >
      <h1
        className="sc-EHOje fvXwPD"
      >
        Get a free year of driving!
      </h1>
      <p
        className="sc-bZQynM GNZEL"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In erat eros, finibus ac ullamcorper sit amet, tempus quis lacus. Quisque eleifend semper pretium. Sed rutrum odio lectus, id maximus nunc rhoncus sed. Praesent quis suscipit dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer orci dui, rutrum eu feugiat lobortis, tristique sollicitudin est. Nulla tincidunt semper nibh at pulvinar. Etiam tempor quam vitae neque ornare efficitur. Morbi id egestas est, at viverra orci. Fusce eleifend placerat ligula, eget viverra lectus facilisis vitae. Praesent placerat tortor a mi laoreet, quis lobortis nunc eleifend.
      </p>
    </section>
    <section
      className="sc-ifAKCX cFlEyZ"
    >
      <h1
        className="sc-EHOje fvXwPD"
      >
        Get a car leasing offer
      </h1>
      <p
        className="sc-bZQynM GNZEL"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In erat eros, finibus ac ullamcorper sit amet, tempus quis lacus.
      </p>
      <form>
        <div
          className="sc-gzVnrw ipJtJo"
        >
          <div
            className="sc-htoDjs eYQFUo"
          >
            <label
              className="sc-dnqmqq dmpbsQ"
              htmlFor="firstName"
            >
              First name
            </label>
            <div
              className="sc-iwsKbI jXLLop"
            >
              <input
                className="sc-gZMcBi eVAzlW"
                id="firstName"
                placeholder="Enter first name"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="sc-htoDjs eYQFUo"
          >
            <label
              className="sc-dnqmqq dmpbsQ"
              htmlFor="surname"
            >
              Surname
            </label>
            <div
              className="sc-iwsKbI jXLLop"
            >
              <input
                className="sc-gZMcBi eVAzlW"
                id="surname"
                placeholder="Enter surname"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="sc-htoDjs eYQFUo"
        >
          <label
            className="sc-dnqmqq dmpbsQ"
            htmlFor="email"
          >
            Email address
          </label>
          <div
            className="sc-iwsKbI jXLLop"
          >
            <input
              className="sc-gZMcBi eVAzlW"
              id="email"
              placeholder="Enter your email address"
              type="email"
              value=""
            />
          </div>
        </div>
        <div
          className="sc-htoDjs eYQFUo"
        >
          <label
            className="sc-dnqmqq dmpbsQ"
            htmlFor="phoneNumber"
          >
            Phone number
          </label>
          <div
            className="sc-iwsKbI jXLLop"
          >
            <input
              className="sc-gZMcBi eVAzlW"
              id="phoneNumber"
              placeholder="Enter your phone number"
              type="tel"
              value=""
            />
          </div>
        </div>
        <div
          className="sc-htoDjs eYQFUo"
        >
          <label
            className="sc-dnqmqq dmpbsQ"
            htmlFor="voucherCode"
          >
            Voucher code
          </label>
          <div
            className="sc-iwsKbI jXLLop"
          >
            <input
              className="sc-gZMcBi eVAzlW"
              id="voucherCode"
              placeholder="Enter your voucher code"
              type="number"
              value=""
            />
          </div>
        </div>
        <div
          className="sc-htoDjs eYQFUo"
        >
          <input
            checked={false}
            className="sc-jTzLTM dEjMcT"
            id="acceptPrivacy"
            type="checkbox"
          />
          <span
            className="sc-fjdhpX bPkZvL"
          />
          <label
            className="sc-VigVT gZbLvf"
            htmlFor="acceptPrivacy"
          >
            Accept Privacy Settlement
          </label>
        </div>
        <button
          className="sc-jzJRlG fXutx"
          disabled={false}
          type="submit"
        >
          <span
            className="sc-cSHVUG dpTofC"
          >
            Get Offer
          </span>
          <svg
            className="sc-kAzzGY jmHSDm"
          >
            arrow-right.svg
          </svg>
        </button>
      </form>
    </section>
  </div>
</div>
`;
